# architecture-as-code

./: LICENSE  MANIFEST.in  Pipfile  README.md  setup.cfg
src/architecture_as_code/: __init__.py
src/architecture_as_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/architecture_as_code/templates/: k8s_template.yaml  k8s_template_volume_claim_tanzu.yaml
src/architecture_as_code/templates/.ipynb_checkpoints/: k8s_template_ingress-checkpoint.yaml
