[metadata]
name = architecture-as-code
version = 0.0.11
author = kg0809
author_email = kg0809developer@gmail.com
description = Standardise and speed up application architecture design and deployments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kg0809/architecture-as-code
project_urls =
    Bug Tracker = https://github.com/kg0809/architecture-as-code/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
  ruamel.yaml
  diagrams
  redis

[options.packages.find]
where = src